[package]
name = "yd"
version = "0.4.11"
edition = "2021"
description = "A personal command-line toolkit"
license = "MIT"
repository = "https://github.com/9sx77ssl/yd"

[dependencies]
aes-gcm = "0.10"
async-trait = "0.1"
bip39 = { version = "2", features = ["rand"] }
bitcoin = "0.32"
bs58 = "0.5"
ed25519-dalek = "2"
hmac = "0.12"
clap = { version = "4.5", features = ["derive", "color"] }
color-eyre = "0.6"
directories = "6"
futures = "0.3"
hex = "0.4"
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"] }
k256 = "0.13"
owo-colors = "4"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
ripemd = "0.1"
rpassword = "7"
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sha3 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "macros"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
